# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_PREREQ([2.59])

AC_INIT(libevhttp, 0.0.4, trywen@qq.com)
AC_CONFIG_SRCDIR(HttpServer.cpp)
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(libevhttp,0.0.4)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lev':
AC_CHECK_LIB([ev], [main])
# FIXME: Replace `main' with a function in `-lrt':
# AC_CHECK_LIB([rt], [main])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdlib.h string.h sys/file.h sys/socket.h sys/time.h sys/timeb.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
#AC_TYPE_SSIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([getpagesize gettimeofday inet_ntoa memset socket strcasecmp strerror strtol])

#AC_PROG_LIBTOOL
#AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
